--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "elm-webpack-loader": "^3.0.3"
   }
 }
