--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "jshint": "^2.9.2",
+    "jshint-loader": "^0.8.3",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
